[project]
name = "hello-gpt-oss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "fastapi>=0.116.1",
    "openai==1.99.1",
    "openai-agents==0.2.4",
    "pdfplumber>=0.11.7",
    "python-dotenv",
    "uvicorn[standard]>=0.35.0",
]
